# tricked

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLEANUP_TODO.md  CONTRIBUTING.md  CRICKET_STYLE.md  Cargo.toml  Dockerfile  Dockerfile.cuda  GAME_MECHANICS.md  GOALS.md  GUMBEL_MUZERO_DOSSIER.md  LICENSE  METRICS.html  Makefile  PERFORMANCE_REPORT.md  README.md  STYLE.md  auto_tune_implement_plan.md  auto_tune_tasks.md  auto_tune_todo.md  autotune.db  big_files.md  build.rs  coverage-python.xml  current_code_coverage.md  decode_grid.py  demo_sumtree.rs  docker-compose.yml  docker-entrypoint.sh  dosie.md  dummy.pth  dummy_db.py  gen_coords.py  generate_maps.js  manage.py  optuna_study.db  package.json  (+22 more)
.agents/rules/: tricked-cricket-style.md
.github/workflows/: ci.yml
backend/: config_schema.py  main.py  process_manager.py  server.py  telemetry.py  test_inf.py
backend/engine/: build.rs  pyproject.toml
backend/engine/src/: cli.rs  config.rs  lib.rs  queue.rs  test_custom_op.rs
backend/engine/src/core/: features.rs  mod.rs
backend/engine/src/env/: reanalyze.rs
backend/engine/src/mcts/: evaluator.rs  gumbel.rs  mod.rs  search_tests.rs  tree.rs
backend/engine/src/train/buffer/: batcher.rs  core.rs  mod.rs  state.rs
backend/extensions/: build_pure_so.py  extract_feature.cu  native_features.py  setup_ops.py
backend/models/: muzero.py
backend/proto_out/: tricked.proto
backend/tests/: test_backend_e2e.py  test_config.py  test_model_flow.py  test_telemetry.py
backend/training/: loop.py
backend/tuning/: optuna_study.py
benches/: feature_bench.rs  feature_extract.rs  queue_bench.rs  replay_bench.rs
conf/: config.yaml
control_center/: package-lock.json  package.json  vite.config.ts
control_center/src/: App.test.tsx  App.tsx  ErrorBoundary.tsx  setupTests.ts
control_center/src-tauri/: Cargo.toml  tauri.conf.json  test_gag.rs
crates/tricked_shared/: Cargo.toml
docs/plans/: 2026-04-11-code-modularization.md  2026-04-11-control-center-refactor.md  2026-04-11-echarts-bar-pivot.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts
frontend/e2e/: boundary.spec.ts  config_run_flow.spec.ts  eval_flow.spec.ts  metrics_flow.spec.ts  play_flow.spec.ts  system_telemetry_flow.spec.ts  terminal_flow.spec.ts  tuning_flow.spec.ts  vault_flow.spec.ts
frontend/src/: App.test.tsx  App.tsx  index.css  main.tsx  setupTests.ts
models/: best_model_mac.pth
runs/: experience.db
runs/triango_muzero/: events.out.tfevents.1773773251.luiss-mbp.lan.91906.0  events.out.tfevents.1773773251.luiss-mbp.lan.91906.1  events.out.tfevents.1773773327.luiss-mbp.lan.92098.0  events.out.tfevents.1773773327.luiss-mbp.lan.92098.1  events.out.tfevents.1773773509.luiss-mbp.lan.93764.0  events.out.tfevents.1773773509.luiss-mbp.lan.93764.1
runs/tricked_muzero/: events.out.tfevents.1773773561.luiss-mbp.lan.94753.0  events.out.tfevents.1773773561.luiss-mbp.lan.94753.1  events.out.tfevents.1773773624.luiss-mbp.lan.94905.0  events.out.tfevents.1773773624.luiss-mbp.lan.94905.1  events.out.tfevents.1773775864.luiss-mbp.lan.98724.0  events.out.tfevents.1773775865.luiss-mbp.lan.98724.1  events.out.tfevents.1773776020.luiss-mbp.lan.99250.0  events.out.tfevents.1773776021.luiss-mbp.lan.99250.1  events.out.tfevents.1773776047.luiss-mbp.lan.99363.0  events.out.tfevents.1773776047.luiss-mbp.lan.99363.1  events.out.tfevents.1773776071.luiss-mbp.lan.99474.0  (+9 more)
scripts/: README.md  aim_logger.py  append_dossier.py  append_dossier2.py  auto_tune.py  benchmark.py  build_pt.py  build_pure_so.py  check_profiling.py  compute_rotation_map.py  custom_ops.cpp  dashboard.py  export_bptt.py  export_math_kernels.py  export_onnx.py  extract_feature.cu  generate_all.py  generate_dossier.py  generate_markdown_report.py  generate_rotation_map.py  generate_rust_constants.py  optuna_ask.py  optuna_daemon.py  optuna_insights.py  optuna_tell.py  play_human.py  profile_cmodule.py  profile_hotpath.sh  stage_release.sh  tb_logger.py  test_optuna_daemon.py  tune.py  wandb_logger.py
scripts/configs/: big_deep_metrics.csv  (+5 more)
src/: board.rs  cli.rs  config.rs  constants.rs  features.rs  lib.rs  main.rs  mcts.rs  neighbors.rs  node.rs  performance_benches.rs  queue.rs  reanalyze.rs  selfplay.rs  serialization.rs  sumtree.rs  telemetry.rs  test_custom_op.rs  test_sparse.rs  tests.rs
src/tricked_rs/: Cargo.toml  README.md  build.rs  coverage.lcov  pyproject.toml
src/tricked_rs/src/: board.rs  buffer.rs  constants.rs  features.rs  lib.rs  mcts.rs  neighbors.rs  node.rs  serialization.rs  sumtree.rs  telemetry.rs  test_cmodule.rs  test_dlpack.rs  test_dlpack2.rs  worker.rs
src/tricked_rs/tests/: mcts_test.rs
studies/: auto_tune_sota.py  hardware_optuna_study.db  hardware_tune.py  learning_tune.py  mcts_tune.py  quick_tune_baseline.py  unified_tune.py
tests/: README.md  arcswap_test.rs  board_fuzz.proptest-regressions  board_fuzz.rs  conftest.py  game_over_test.rs  loom_tests.rs  mock_config.py  test_behavior.py  test_buffer_ipc.py  test_closed_pieces.py  test_config.py  test_convergence.py  test_coverage_gap.py  test_curriculum.py  test_edges.py  test_exploit.py  test_inference_loop.py  test_main.py  test_math_engine.py  test_mcts.py  test_network.py  test_overfit.py  test_pieces_coverage.py  test_print_pieces.py  test_reanalyzer.py  test_redis_pipeline.py  test_representation.py  test_rotation_behavior.py  test_search_coverage.py  test_self_play.py  test_state.py  test_state_coverage.py  test_symmetry.py  test_tc_cmod.rs  test_tc_fwd.rs  test_trainer_math.py  test_training.py
tricked/: config_schema.py  db_writer.py  job_monitor.py  main.py  process_manager.py  server.py  telemetry.py  test_engine.py  test_inf.py
tricked.egg-info/: PKG-INFO
ui/: README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
wandb/: latest-run
(+434 files in other folders)
