[package]
name = "tricked_engine"
version = "0.1.0"
edition = "2021"

[dependencies]

ndarray = "0.15.6"
once_cell = "1.19.0"
rand = "0.8.5"
zmq = "0.10.0"
bytemuck = "1.19.0"
tch = { version = "0.19.0", features = ["download-libtorch"] }
crossbeam-channel = "0.5"
redis = "0.24.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
lz4_flex = "0.11"

# Web server & Async
tokio = { version = "1.37", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
futures-util = "0.3"


[[bin]]
name = "tricked_engine"
path = "src/main.rs"

