[package]
name = "tricked_engine"
version = "0.1.0"
edition = "2021"

[dependencies]

ndarray = "0.15.6"
once_cell = "1.19.0"
rand = "0.8.5"

bytemuck = "1.19.0"
tch = { version = "0.19.0", features = ["download-libtorch"] }
crossbeam-channel = "0.5"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sysinfo = "0.30"

arc-swap = "1.6"
arrayvec = "0.7.6"
hotpath = "0.14"
crossbeam-queue = "0.3"
crossbeam-utils = "0.8"
rand_xoshiro = "0.6"
rusqlite = { version = "0.39.0", features = ["bundled"] }

[features]
hotpath = ["hotpath/hotpath"]
hotpath-alloc = ["hotpath/hotpath-alloc"]

[lib]
name = "tricked_engine"
path = "src/lib.rs"

[[bin]]
name = "tricked_engine"
path = "src/main.rs"

[dev-dependencies]
proptest = "1.4.0"
criterion = { version = "0.5.1", features = ["html_reports"] }
loom = "0.7"

[[bench]]
name = "feature_bench"
harness = false

[[bench]]
name = "queue_bench"
harness = false
