[package]
name = "tricked_engine"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tricked_engine"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.0", features = ["auto-initialize"] }
once_cell = "1.19.0"
rand = "0.8.5"
zmq = "0.10.0"
bytemuck = "1.19.0"
tch = "0.23.0"
