[package]
name = "tricked_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tricked_engine"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.21.2" }
numpy = "0.21.0"
ndarray = "0.15.6"
once_cell = "1.19.0"
rand = "0.8.5"
zmq = "0.10.0"
bytemuck = "1.19.0"
tch = "0.19.0"
crossbeam-channel = "0.5"
redis = "0.24.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lz4_flex = "0.11"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[[bin]]
name = "self_play_worker"
path = "src/bin/self_play_worker.rs"
